Fixed text alignment when plaintext was inserted into menu bar content in Chrome.

--- a/app/assets/stylesheets/easy_menu.css.scss
+++ b/app/assets/stylesheets/easy_menu.css.scss
@@ -35,7 +35,7 @@
   // MENU BAR CONTENT
   .menu_bar_content{
     display: inline-block;
-    vertical-align: top;
+    vertical-align: middle;
     margin: 0 $menu-bar-item-spacing 0 0;
 
     // CONTENTS
@@ -56,7 +56,6 @@
       border-right: 1px solid #F7F7F7;
       display: inline-block;
       height: $menu-bar-separator-height;
-      margin: ($menu-bar-item-height - $menu-bar-separator-height)/2 0;
       padding-right: 1px;
     }
 
@@ -94,7 +93,7 @@
       // Subsequent menu groups
       .menu_content + .menu_content .menu_group_title{
         border-top: 1px solid #E0E0E0;
-        margin-top: $menu-item-vertical-padding * 2;
+        margin-top: $menu-item-vertical-padding;
       }
 
     }
